# jipp4_project

./: CMakeLists.txt  PROJEKT.pro  PROJEKT.pro.user.060823d  README.md
form/: addlecturerdialog.ui  addstudentdialog.ui  changedialog.ui  coursedialog.ui  employeedialog.ui  loadform.ui  logindialog.ui  studentdialog.ui  subjecteditdialog.ui
header/: addlecturerdialog.h  address.h  addstudentdialog.h  changedialog.h  connector.h  course.h  coursedialog.h  dbreader.h  dbwriter.h  employee.h  employeedialog.h  grade.h  lecturer.h  loadform.h  logindialog.h  person.h  program.h  student.h  studentdialog.h  studenttablegenerator.h  subject.h  subjecteditdialog.h  tablewidgetgenerator.h  tools.h
source/: addlecturerdialog.cpp  address.cpp  addstudentdialog.cpp  changedialog.cpp  connector.cpp  course.cpp  coursedialog.cpp  dbreader.cpp  dbwriter.cpp  employee.cpp  employeedialog.cpp  grade.cpp  lecturer.cpp  loadform.cpp  logindialog.cpp  main.cpp  person.cpp  program.cpp  student.cpp  studentdialog.cpp  studenttablegenerator.cpp  subject.cpp  subjecteditdialog.cpp  tablewidgetgenerator.cpp  tools.cpp
